testsuite/good/decorators/test_decorator_polymorphic_2/DecoratorA.flux
decorator DecoratorA decorates A
methods {
   void methodA() {
      System.out.println("DecoratorA.methodA");
      base.methodA();
   }
}