testsuite/bad/test_decorating_subtype_of_base/A.flux
type A {
   void methodA();
}
methods {
   void methodA() {
      System.out.println("A.methodA");
   }
}